<resources>
    <string name="app_name">Skin Cancer Detection App</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis : </string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="preview">preview\n</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="image_item">image item</string>
    <string name="confidence_score">confidence score</string>
    <string name="saved_analysis">Saved Analysis</string>
    <string name="health_recommendation">Daily Health Article Recommendation</string>
    <string name="title">title</string>
    <string name="desc">description</string>
    <string name="author">author</string>
    <string name="date">date</string>
    <string name="news">news</string>
</resources>