<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_item"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="20dp"
    android:padding="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_news_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_author"
            android:contentDescription="@string/image_item"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_author"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_title"
            card_view:layout_constraintBottom_toTopOf="@+id/img_news_photo"
            tools:text="@string/author" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_title"
            card_view:layout_constraintStart_toEndOf="@id/tv_author" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_news_photo"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_news_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_author"
            tools:text="@string/desc" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>
